--- a/package.json
+++ b/package.json
@@ -7,11 +7,10 @@
         "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
     },
     "dependencies": {
-        "body-parser": "^1.19.0",
-        "express": "^4.17.1",
-        "nodemon": "^2.0.6"
+        "body-parser": "^1.18.3",
+        "express": "^4.17.1"
     },
     "devDependencies": {
-        "concurrently": "^4.0.1"
+        "concurrently": "^4.1.2"
     }
 }
